# ppgca_ds_tfinal

./: .gitignore  README.md  impl1.ipynb  impl2.ipynb  impl3.ipynb  pyproject.toml  rede_neural.drawio  relatorio.ipynb
modelo2/: impl2.ipynb
modelo3/: impl3.ipynb
temct-cd-env/: pyproject.toml
