[tool.poetry]
name = "ppgca-ds-tfinal"
version = "0.1.0"
description = "Projeto final de Ciencia de Dados"
authors = ["Thiago Brandenburg <thiagobranden@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.16.1"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
